objects/CreditCardDeclineEmail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Include_Order_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked - include order number at the end of the email subject.</description>
        <inlineHelpText>If checked - include order number at the end of the email subject.</inlineHelpText>
        <label>Include Order Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview_Text__c</fullName>
        <label>Preview Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CreditCardDeclineEmail</label>
</CustomObject>